# KICK_Pi

./: .gitignore  Dockerfile  README.md  configure_docker.sh  purge_docker.sh
ADC_Test/: adc_test_main.py  run_adc_test.sh
Board_Tests/PCB_Tests/: BOARD_GLOBALS.py  SPI_Board.py  ShiftRegister.py  Test_Parameter_Globals.py  custom_board_test_main.py
Board_Tests/PCB_Tests/data/: Rep_0_Loc_CL_Seq_0.csv  Rep_0_Loc_CL_Seq_1.csv  Rep_0_Loc_CL_Seq_2.csv  Rep_0_Loc_CL_Seq_3.csv  Rep_0_Loc_CL_Seq_5.csv  Rep_0_Loc_CR_Seq_5.csv  Rep_0_Loc_FL_Seq_1.csv  Rep_0_Loc_FL_Seq_2.csv  Rep_0_Loc_FR_Seq_0.csv  Rep_0_Loc_FR_Seq_2.csv  Rep_0_Loc_FR_Seq_5.csv  Rep_0_Loc_RL_Seq_0.csv  Rep_0_Loc_RL_Seq_3.csv  Rep_0_Loc_RR_Seq_2.csv  Rep_0_Loc_XX_Seq_1.csv  Rep_0_Loc_XX_Seq_4.csv  Rep_1_Loc_CL_Seq_3.csv  Rep_1_Loc_CL_Seq_4.csv  Rep_1_Loc_CL_Seq_5.csv  Rep_1_Loc_CR_Seq_0.csv  Rep_1_Loc_CR_Seq_3.csv  Rep_1_Loc_CR_Seq_4.csv  Rep_1_Loc_FL_Seq_1.csv  Rep_1_Loc_FL_Seq_2.csv  Rep_1_Loc_FL_Seq_4.csv  Rep_1_Loc_FR_Seq_0.csv  Rep_1_Loc_FR_Seq_1.csv  Rep_1_Loc_FR_Seq_2.csv  Rep_1_Loc_FR_Seq_5.csv  Rep_1_Loc_RL_Seq_1.csv  Rep_1_Loc_RL_Seq_2.csv  Rep_1_Loc_RL_Seq_4.csv  Rep_1_Loc_RL_Seq_5.csv  Rep_1_Loc_RR_Seq_0.csv  (+5 more)
Board_Tests/Shift_Reg_Tests/: SHIFT_GLOBALS.py  ShiftRegister.py  shift_reg_main.py
Board_Tests/ShoeBot_Class_Tests/: Modules.py
sros_ws/: kickstart_test.sh
sros_ws/launch/: kickstart_test.sh  launch_kick_echo_test.py
sros_ws/src/battery_monitor/: package.xml  setup.cfg  setup.py
sros_ws/src/battery_monitor/battery_monitor/: __init__.py  battery_monitor_node.py  dummy_battery_node.py
(+883 files in other folders)
