<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_monitor</name>
  <version>0.1.0</version>
  <description>Monitors battery status using the ADS1115 and a voltage divider circuit</description>
  <maintainer email="tylerbartunek@gmail.com">tyler</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-ADS1x15-ADC</exec_depend>
  <exec_depend>shoebot_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
